DuPont DevSB/src/objects/ffirule__IntegrationRuleSourceLineItemTest__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__ABooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A Boolean Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__ANumberField__c</fullName>
        <label>A Number Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__ATextField__c</fullName>
        <label>A Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__AnotherTextField__c</fullName>
        <label>Another Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ClickLinkAnotherSourceLineItemCount__c</fullName>
        <label>ClickLink Another Source Line Item Count</label>
        <summaryForeignKey>ffirule__ClickLinkAnotherSourceTest__c.ffirule__ClickLinkSourceLineItemTest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRuleSourceTest__c</fullName>
        <label>ClickLink Source Test</label>
        <referenceTo>ffirule__IntegrationRuleSourceTest__c</referenceTo>
        <relationshipLabel>ClickLink Source Line Item Tests</relationshipLabel>
        <relationshipName>IntegrationRuleSourceLineItemTests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffirule__ProcessFormula__c</fullName>
        <formula>IF(CONTAINS(ffirule__ATextField__c, &apos;Skip&apos;), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>ClickLink Source Line Item Test</label>
    <nameField>
        <displayFormat>IRTSTSL-{00000000}</displayFormat>
        <label>ClickLink Source Line Item Test</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Source Line Item Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>